# Pallas-Bot

./: .env  .env.prod  .gitignore  Dockerfile  README.md  bot.py  docker-compose.yml  pyproject.toml  ruff.toml
.github/workflows/: ci.yml  docker-image.yml  health-check.yml  release.yml
docs/: Deployment.md  DockerDeploymen.md  DockerDeployment.md
resource/styles/default/: elements.yml  setting.yml
src/common/config/: __init__.py
src/common/db/: __init__.py  modules.py
src/common/utils/: __init__.py  invalidate_cache.py  voice_downloader.py
src/common/utils/array2cqcode/: __init__.py  message_segment.py
src/common/utils/media_cache/: __init__.py
src/plugins/auto_accept/: __init__.py
src/plugins/block/: __init__.py  config.py
src/plugins/bot_status/: README.md  __init__.py  bot_monitor.py  config.py  mail_notifier.py  readme.txt  utils.py
src/plugins/callback/: __init__.py
src/plugins/chat/: __init__.py  config.py
src/plugins/drink/: __init__.py
src/plugins/greeting/: __init__.py  config.py  voice.py
src/plugins/help/: __init__.py  config.py  event_preprocessor.py  handlers.py  markdown_generator.py  plugin_manager.py  renderer.py  styles.py
src/plugins/repeater/: __init__.py  config.py  emoji_reaction.py  model.py
src/plugins/roulette/: __init__.py
src/plugins/sing/: __init__.py  config.py  ncm.py
src/plugins/sing/ncm_login/: __init__.py
src/plugins/take_name/: __init__.py
