[project]
name = "pallas-bot"
version = "2.2.0"
description = "《明日方舟》帕拉斯 Bot"
authors = [{ name = "MistEO" }]
maintainers = [{ name = "mxcoras", email = "mxcoras@outlook.com" }]
license = { file = "LICENSE" }
readme = "README.md"
requires-python = ">=3.12,<4.0"
dependencies = [
    "aiosmtplib>=5.0.0",
    "beanie>=2.0.0",
    "httpx>=0.28.1",
    "jieba>=0.42.1",
    "nb-cli>=1.5.0",
    "nonebot-adapter-onebot>=2.4.6",
    "nonebot-plugin-alconna>=0.60.3",
    "nonebot-plugin-apscheduler>=0.5.0",
    "nonebot2[fastapi]>=2.4.4",
    "pillowmd>=0.7.3",
    "pyncm-async>=1.8.2",
    "pypinyin>=0.55.0",
    "nonebot-plugin-autoreply>=0.2.13",
    "nonebot-plugin-bili-helper>=0.9.3",
    "nonebot-plugin-emojilike>=0.2.4",
    "python-multipart>=0.0.20",
    "python-ulid>=3.1.0",
    "tenacity>=9.1.2",
]

[project.optional-dependencies]
perf = [
    "jieba-next>=1.0.0a5"
]

[dependency-groups]
dev = [
    "pip-audit>=2.9.0",
    "ruff>=0.11.13",
]

[[tool.uv.index]]
name = "tuna"
url = "https://pypi.tuna.tsinghua.edu.cn/simple"
default = true

[[tool.uv.index]]
name = "pypi"
url = "https://pypi.org/simple"

[tool.nonebot]
plugin_dirs = ["src/plugins"]
builtin_plugins = []

[tool.nonebot.plugins]
"@local" = []
nonebot-plugin-apscheduler = ["nonebot_plugin_apscheduler"]
nonebot_plugin_alconna = ["nonebot_plugin_alconna"]
nonebot_plugin_autoreply = ["nonebot_plugin_autoreply"]
nonebot_plugin_bilichat = ["nonebot_plugin_bilichat"]
nonebot_plugin_emojilike = ["nonebot_plugin_emojilike"]


[tool.nonebot.adapters]
"@local" = []
nonebot-adapter-onebot = [{name = "OneBot V11", module_name = "nonebot.adapters.onebot.v11"}]
